[Constraint solver] Use the type representative in the "occurs" check.

When performing the occurs check, look for the *representative* of the
type variable we're about to bind, rather than the type variable
itself. Fixes rdar://problem/26845038, SR-1512, SR-1902, SR2635,
SR-2852, and SR-2766.

(cherry picked from commit b29510683063f6164b6bbca062d55bb7d6d4ea54)