lib/Sema/CSSimplify.cpp
@@ -1248,6 +1248,7 @@ ConstraintSystem::matchTypes(Type type1, Type type2, TypeMatchKind kind,
       bool wantRvalue = kind == TypeMatchKind::SameType;
       if (typeVar1) {
         // Simplify the right-hand type and perform the "occurs" check.
+        typeVar1 = getRepresentative(typeVar1);
         type2 = simplifyType(type2);
         if (typeVarOccursInType(typeVar1, type2))
           return formUnsolvedResult();
@@ -1293,10 +1294,11 @@ ConstraintSystem::matchTypes(Type type1, Type type2, TypeMatchKind kind,
         return SolutionKind::Solved;
       }
 
-        // Simplify the left-hand type and perform the "occurs" check.
-        type1 = simplifyType(type1);
-        if (typeVarOccursInType(typeVar2, type1))
-          return formUnsolvedResult();
+      // Simplify the left-hand type and perform the "occurs" check.
+      typeVar2 = getRepresentative(typeVar2);
+      type1 = simplifyType(type1);
+      if (typeVarOccursInType(typeVar2, type1))
+        return formUnsolvedResult();
 
       // If we want an rvalue, get the rvalue.
       if (wantRvalue)
@@ -1316,6 +1318,7 @@ ConstraintSystem::matchTypes(Type type1, Type type2, TypeMatchKind kind,
     case TypeMatchKind::BindParamType: {
       if (typeVar2 && !typeVar1) {
         // Simplify the left-hand type and perform the "occurs" check.
+        typeVar2 = getRepresentative(typeVar2);
         type1 = simplifyType(type1);
         if (typeVarOccursInType(typeVar2, type1))
           return formUnsolvedResult();
@@ -1328,6 +1331,7 @@ ConstraintSystem::matchTypes(Type type1, Type type2, TypeMatchKind kind,
         return SolutionKind::Solved;
       } else if (typeVar1 && !typeVar2) {
         // Simplify the right-hand type and perform the "occurs" check.
+        typeVar1 = getRepresentative(typeVar1);
         type2 = simplifyType(type2);
         if (typeVarOccursInType(typeVar1, type2))
           return formUnsolvedResult();
